test/fail/byte_and_ex.v3
//@execute = 1000000
def main() -> int {
	for (i = -1; i < 256; i++) {
		for (j = -1; j < 256; j++) {
			var e = byte.!(i & j);
			if (e != byte.!(byte.!(i) & byte.!(j))) return (i #<< 8) | j;
			if (e !=       (byte.!(i) & byte.!(j))) return (i #<< 8) | j;
		}
	}
	return 1000000;
}
